--- a/creating_and_manipulating_tensors.ipynb
+++ b/creating_and_manipulating_tensors.ipynb
@@ -898,7 +898,11 @@
       "metadata": {
         "id": "6UUluecQSCvr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 213
+        },
+        "outputId": "3395f41e-1aa3-4475-ba65-40ea90a95c44"
       },
       "cell_type": "code",
       "source": [
@@ -934,8 +938,25 @@
         "\n",
         "  print(resulting_matrix.eval())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 3  6  9]\n",
+            " [ 5  1  6]\n",
+            " [ 4  6 10]\n",
+            " [ 2  5  7]\n",
+            " [ 6  5 11]\n",
+            " [ 1  4  5]\n",
+            " [ 4  4  8]\n",
+            " [ 2  5  7]\n",
+            " [ 2  3  5]\n",
+            " [ 6  2  8]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
